Hiding horizontal content overflow - it's up to course authors to ensure the custom styled blocks and tables with big images are rendered properly

--- a/static/scss/lesson-content/index.scss
+++ b/static/scss/lesson-content/index.scss
@@ -1,4 +1,6 @@
 .lesson-content {
+  overflow-x: auto;
+
   .wrap-instructor-info {
     display: none;
   }
